# cotsb

./: .gitignore  design.md
client/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  client.c  main.cpp
client/cotsb/: client.cpp  client.h  client_engine.cpp  client_engine.h  font_manager.cpp  font_manager.h  game_object.cpp  game_object.h  game_object_tcp_deserialiser.cpp  game_object_tcp_deserialiser.h  game_world.cpp  game_world.h  logging.cpp  logging.h  map.cpp  map.h  map_renderer.cpp  map_renderer.h  map_tcp_deserialiser.cpp  map_tcp_deserialiser.h  message.cpp  message.h  object_manager.h  player.cpp  player.h  player_tcp_deserialiser.cpp  player_tcp_deserialiser.h  sound.cpp  sound.h  texture_manager.cpp  texture_manager.h
client/cotsb/ui/: button.cpp  button.h  component.cpp  component.h  game_hud.cpp  game_hud.h  label.cpp  label.h  main_menu.cpp  main_menu.h  manager.cpp  manager.h  menu_helper.cpp  menu_helper.h  screen.cpp  screen.h  server_connect.cpp  server_connect.h  text_input.cpp  text_input.h  ui_state.cpp  ui_state.h
client/vsproj/: vsproj.sln  vsproj.vcxproj  vsproj.vcxproj.filters
common/: .ycm_extra_conf.py
common/cotsb/: commands.cpp  commands.h  connection.cpp  connection.h  logging.cpp  logging.h  stream.cpp  stream.h
common/utils/: circle.cpp  circle.h  colour.cpp  colour.h  data.cpp  data.h  lua_serialiser.cpp  lua_serialiser.h  ray.cpp  ray.h  serialisers.h  utils.cpp  utils.h
server/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  client.c  main.cpp  server.c
server/cotsb/: .server.cpp.swp  component.cpp  component.h  component_render.h  component_renderable.cpp  component_renderable.h  component_transform.cpp  component_transform.h  connection.cpp  connection.h  game_object.cpp  game_object.h  game_object2.cpp  game_object2.h  game_object_tcp_serialiser.cpp  game_object_tcp_serialiser.h  map.cpp  map.h  map_lua_deserialiser.cpp  map_lua_deserialiser.h  map_tcp_serialiser.cpp  map_tcp_serialiser.h  message.cpp  message.h  npc.h  packet.h  player.cpp  player.h  player_tcp_serialiser.cpp  player_tcp_serialiser.h  profile.cpp  profile.h  profile_lua_serialiser.cpp  profile_lua_serialiser.h  server.cpp  server.d  server.h  server_engine.cpp  server_engine.h  stream.cpp  (+2 more)
server/data/maps/: map1.lua
server/vsproj/: SFML.props  SFMLRelease.props  server.sln  server.vcxproj  server.vcxproj.filters
(+3 files in other folders)
